<resources>
    <string name="app_name">TechBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="near_me">Near Me</string>
    <string name="home">Home</string>
    <string name="new_post">New</string>
    <string name="likes">Likes</string>
    <string name="me">Me</string>
    <string name="inbox">Inbox</string>
    <string name="exit">Logout</string>
    <string name="Event">Title</string>
    <string name="Location">Location</string>
    <string name="Event1">Java expo</string>
    <string name="Event6">Kotlin expo</string>
    <string name="Event2">JavaScript expo</string>
    <string name="Event3">Python expo</string>
    <string name="Event4">API expo</string>
    <string name="Event5">MLK expo</string>
    <string name="Event7">Dev Ops expo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="event_location">event_location</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">favorite description</string>
    <string name="search">search</string>
    <string name="content_description_search">search_description</string>
    <string name="more">more icon</string>
    <string name="content_description_more">more description</string>
    <string name="com_latifah_techbook_ui_fragments_contactfragment">com.latifah.techbook.ui.fragments.ContactFragment</string>
    <string name="Contacts">Contacts</string>
    <string name="content_description_one">description</string>
    <string name="first_name">First Name</string>
    <string name="time_status">time_status</string>
    <string name="venue">venue</string>
    <string name="online_venue">online_venue</string>
    <string name="event_title">event_title</string>
    <string name="this_is_where_the_short_event_description_would_go_a_string_called_shortdescription">This is where the short event description would go. A string called shortDescription.</string>
    <string name="date_time">date_time</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="bio">Bio</string>
    <string name="update_email">Update email</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="write_a_quick_bio">Write a quick bio!</string>
    <string name="user_favTitle">otherUser</string>
    <string name="otherUser_description">otherUserDescription</string>

</resources>