<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView" />
    <item android:title="Events" />
    <item android:title="Contacts" />
        <item android:title="Item" />
        <item android:title="Item" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_mail_24"
            android:title="@string/Contacts"
            android:contentDescription="@string/content_description_one"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/more"
            android:title="@string/more"
            android:contentDescription="@string/content_description_more"
            app:showAsAction="never" />

</menu>